--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     color: white;
     background: black;
     margin: 20px;
+    font-family:"chakra petch", sans-serif ;
 }
    header{
       border-bottom: solid 2px rgb(42, 122, 228);
